organization swagger 추가
